PC-26, PC-29 - Fixed issues with locations, Implemented TargetGroup search and update functionalities

--- a/WebContent/views/navigation.view.html
+++ b/WebContent/views/navigation.view.html
@@ -55,12 +55,12 @@
             <li ng-class="{'active' : model.$location.url() =='/report'}">
                 <a href=""><i class="fa fa-bar-chart"></i> Reports </a>
             </li>
-            <li ng-class="{'active' : model.$location.url() =='/localAdmin'}">
+           <!--  <li ng-class="{'active' : model.$location.url() =='/localAdmin'}">
                 <a href=""><i class="fa fa-user"></i> Local Admins </a>
             </li>
             <li ng-class="{'active' : model.$location.url() =='/user'}">
                 <a href=""><i class="fa fa-user"></i> Users </a>
-            </li>
+            </li> -->
         </ul>
     </div>
     <!-- /.navbar-collapse -->
