--- a/WebContent/views/training.view.html
+++ b/WebContent/views/training.view.html
@@ -35,7 +35,6 @@
 										      <div ng-bind-html="training.trainingName | highlight: $select.search"></div>
 										    </ui-select-choices>
 										  </ui-select>
-<!--                                     	<input type="text" class="form-control" id="inputName2" placeholder="Select or search for a training" ng-model="model.searchTraining.name"> -->
                                     </div>
                             	</div>
                             </div>
@@ -46,173 +45,123 @@
 				
 				<div ng-if="model.isSelected">
 							
-	           		<h4>Showing details for training: <b>{{model.trainings.selected.trainingName}}</b></h4>
-	           		<div class="table-responsive" id="formtable">
-		    			<table class="table table-striped table-bordered">
-		        			<thead>
-						        <tr>
-						            <th> Location Name</th>
-						            <th> City</th>
-						            <th> State</th>
-						            <th> Phone Number</th>
-						            <th> Location Code</th>
-						            <th> Actions</th>
-						        </tr>
+	           		<h4>Training Details</h4>
+	           		<div class="form-horizontal">
+                        <div class="form-group">
+                            <label for="inputName2" class="col-sm-2 control-label">Training Name:</label>
+                            <div class="col-sm-7">
+                                <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.selectedTrainingDetails.trainingName">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+                            <div class="col-sm-7">
+                                <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.selectedTrainingDetails.trainingDescription"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-2 control-label">Keywords:</label>
+                            <div class="col-sm-7">
+                                <textarea type="text" class="form-control" id="inputEmail3" placeholder="Keywords" ng-model="model.selectedTrainingDetails.trainingKeywords">
+                                </textarea>
+                            </div>
+                        </div>
+           			
+	           			<h4>Questions asked in this training</h4>
+	           			<table class="table table-striped table-bordered">
+					        <thead>
+					        <tr>
+					            <th> Question</th>
+					            <th> Question Category</th>
+					            <th> Actions</th>
+					        </tr>
+					        <tr>
+					        	<th>
+	                        		<input type="text" ng-model="model.trainingQuestion.questionName" class="form-control ng-pristine ng-untouched ng-valid" placeholder="Question">
+	                    		</th>
+	                    		
+	                    		<th>
+	                        		<input type="text" ng-model="model.trainingQuestion.questionCategory" class="form-control ng-pristine ng-untouched ng-valid" placeholder="Question Category">
+	                    		</th>
+	                    		
+	                    		<th>
+	                    			<a><span ng-click="model.addQuestionToTraining()" class="glyphicon glyphicon-plus incrsize" aria-hidden="true"></span></a>
+	                    		</th>
+					        </tr>
 					     
 					        </thead>
-		        			<tbody>
-						        <tr ng-repeat = "loc in model.locationSearchResults">
-						            <td><a href=""> {{loc.locationName}} </a></td>
-						            <td> {{loc.locationCity}} </td>
-						            <td> {{loc.locationState}} </td>
-						            <td> {{loc.locationPhoneNumber}} </td>
-						            <td> {{loc.locationCode}} </td>
-						            
-						            <td>
-						                <a href=""><span class="glyphicon glyphicon-pencil incrsize" data-toggle="modal"
-						                                                 data-target="#myModal" ng-click="model.selectLocation($index)"></span></a>
-						            </td>
-						        </tr>
-						    </tbody>
-		    			</table>
+					        <tbody>
+					        <tr ng-repeat = "trainingQuestion in model.selectedTrainingDetails.trainingQuestions">
+					            <td> {{trainingQuestion.questionName}} </td>
+					            <td> {{trainingQuestion.questionCategoryName}} </td>
+					            
+					            <td>
+					                <a><span class="glyphicon glyphicon-remove incrsize" ng-click="model.removeTrainingQuestion($index)"></span></a>
+					            </td>
+					        </tr>
+					        </tbody>
+					    </table>
+					    
+					    
+					    <h4>Images shown in this training</h4>
+	           			<table class="table table-striped table-bordered">
+					        <thead>
+					        <tr>
+					            <th>Image Category</th>
+					            <th>Image Type</th>
+					            <th>Duration</th>
+					            <th>Number of Images</th>
+					            <th> Actions</th>
+					        </tr>
+					        </thead>
+					        <tbody>
+					        <tr ng-repeat = "trainingImage in model.selectedTrainingDetails.trainingImages">
+					            <td> {{trainingImage.imageCategoryName}} </td>
+					            <td> {{trainingImage.imageType}} </td>
+					            <td> <input type="text" ng-model="trainingImage.duration" class="form-control ng-pristine ng-untouched ng-valid"></td>
+					            <td> <input type="text" ng-model="trainingImage.noOfImages" class="form-control ng-pristine ng-untouched ng-valid"></td>
+					            <td>
+					                <a><span class="glyphicon glyphicon-remove incrsize" ng-click="model.removeTrainingImage($index)"></span></a>
+					            </td>
+					        </tr>
+					        </tbody>
+					    </table> 
+					    
+					    <div class="form-group">
+	                         <div class="col-sm-offset-2 col-sm-7">
+	                             <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.updateTraining()">Update Training</button>
+	                         </div>
+	                     </div>
 					</div>
-           		</div> 
-
+           		</div>
                         </div>
                         <div class="tab-pane active" id="tab_default_2" ng-show="model.isSet('create')">
-                            <div class="form-horizontal" ng-form name="model.locationCreateForm">
-                                <div class="form-group required">
-                                    <label for="inputName2" class="col-sm-2 control-label">Location Name:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" name="createLocationName" ng-maxlength="150" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.newLocation.name" required="required" ng-change="model.checkDuplicate('locationName', model.newLocation.name)">
-                                        <div ng-messages="model.locationCreateForm.createLocationName.$error" style="color:maroon">
-									       	<div ng-message="required">This field is required.</div>
-									        <div ng-message="locationNameError">The location name already exists. Please enter another name.</div>
-									        <div ng-message="maxlength">Your field is too long. Max allowed: 150 chars</div>
-									      
-									    </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputName3" class="col-sm-2 control-label">Description:</label>
-                                    <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" name="createLocationDescription" id="inputName3" ng-maxlength="1000" placeholder="Description of the location" ng-model="model.newLocation.description">
-                                        </textarea>
-                                        <div ng-messages="model.locationCreateForm.createLocationDescription.$error" style="color:maroon">
-									        <div ng-message="maxlength">Your field is too long. Max allowed: 1000 chars.</div>
-									    </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Keywords:</label>
-                                    <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" id="inputEmail3" name="createLocationKeyWords" ng-pattern="/^[a-zA-Z0-9\s-,]{0,300}$/" placeholder="Enter keywords separated by a comma" ng-model="model.newLocation.keywords">
-                                        </textarea>
-                                        <div ng-messages="model.locationCreateForm.createLocationKeyWords.$error" style="color:maroon">
-									       	<div ng-message="pattern">Can be alphanumeric with ',' or '-' or space. Max allowed: 300 chars.</div>
-									    </div>
-                                    </div>
-                                </div>
-                                
-                                 <div class="form-group required">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Location Code:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" name="createLocationCode" class="form-control" id="inputEmail3" ng-pattern="/^[a-z0-9]{6}$/i" placeholder="Location Code" ng-model="model.newLocation.code" ng-change="model.checkDuplicate('locationCode', model.newLocation.code)" required="required">
-                                        <div ng-messages="model.locationCreateForm.createLocationCode.$error" style="color:maroon">
-									       	<div ng-message="pattern">Must be 6 chars long. Can be alphanumeric.</div>
-									        <div ng-message="locationCodeError">The location code already exists. Please enter another code.</div>
-									        <div ng-message="required">This field is required.</div>
-									    </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group required">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Address Line 1:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" class="form-control" name="createLocationAddress1" id="inputEmail3" placeholder="Address" ng-minlength="2" ng-maxlength="100" ng-model="model.newLocation.address1" required="required">
-                                        <div ng-messages="model.locationCreateForm.createLocationAddress1.$error" style="color:maroon">
-									        <div ng-message="required">This field is required.</div>
-									        <div ng-message="maxlength">Your field is too long. Max allowed: 100 chars</div>
-									        <div ng-message="minlength">Your field is too short. Min allowed: 2 chars</div>
-									    </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Address Line 2:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputEmail3" placeholder="Address" ng-model="model.newLocation.address2">
-                                    </div>
-                                </div>
-
-                                <div class="form-group required">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">City:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" class="form-control" name="createLocationCity" id="inputEmail3" placeholder="City" ng-pattern="/^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$/" ng-maxlength="100" ng-model="model.newLocation.city" required="required">
-                                        <div ng-messages="model.locationCreateForm.createLocationCity.$error" style="color:maroon">
-  												<div ng-message="required">This field is required</div>
-  												<div ng-message="maxlength">Your field is too long. Max allowed: 100 chars</div>
-  												<div ng-message="pattern">Must be a City. Example: Boston or New York or San-Francisco</div>
-											</div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group required">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">State:</label>
-                                    <div class="col-sm-7">
-                                        <select name="states" ng-options='state.fieldId as state.fieldValue for state in model.statesList.results' class="form-control" id="inputEmail3" placeholder="State" ng-model="model.newLocation.state" required="required">
-                                        <option value="">Select State</option>
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="form-group required">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Zipcode:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" class="form-control" name="createLocationZipcode" id="inputEmail3" ng-pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/" placeholder="Zipcode" ng-model="model.newLocation.zipcode" required="required">
-                                        <div ng-messages="model.locationCreateForm.createLocationZipcode.$error" style="color:maroon">
-  												<div ng-message="required">This field is required</div>
-  												<div ng-message="pattern">Must be a valid ZIP Code. Example: 02115 or 02115-1234</div>
-											</div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group required">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Phone number:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" max="10" name="createLocationPhone" class="form-control" ng-pattern="/^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/" id="inputEmail3" placeholder="Phone Number" ng-model="model.newLocation.phoneNo" required="required">
-                                        	<div ng-messages="model.locationCreateForm.createLocationPhone.$error" style="color:maroon">
-  												<div ng-message="required">This field is required</div>
-  												<div ng-message="pattern">Must be a valid 10 digit phone number</div>
-											</div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Fax number:</label>
-                                    <div class="col-sm-7">
-                                        <input type="text" max="10" class="form-control" name="createLocationFax" id="inputEmail3" ng-pattern="/^\+?[0-9]{6,}$/" placeholder="Fax Number" ng-model="model.newLocation.faxNo">
-                                        <div ng-messages="model.locationCreateForm.createLocationFax.$error" style="color:maroon">
-  												<div ng-message="pattern">Must be a valid digit fax number. Should contain at least 6 digits.</div>
-											</div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Email:</label>
-                                    <div class="col-sm-7">
-                                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email" name="createLocationEmailAddress" ng-model="model.newLocation.email">
-                                        <div ng-if="!model.locationCreateForm.createLocationEmailAddress.$error.required &amp;&amp;model.locationCreateForm.createLocationEmailAddress.$error.email" class="error" style="color:maroon">
-                                        You did not enter your email address correctly...
-    									</div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
+                            <div class="form-horizontal">
+		                        <div class="form-group">
+		                            <label for="inputName2" class="col-sm-2 control-label">Training Name:</label>
+		                            <div class="col-sm-7">
+		                                <input type="text" class="form-control" id="inputName2" placeholder="Name of the location" ng-model="model.createTraining.trainingName">
+		                            </div>
+		                        </div>
+		                        <div class="form-group">
+		                            <label for="inputName3" class="col-sm-2 control-label">Description:</label>
+		                            <div class="col-sm-7">
+		                                <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the location" ng-model="model.createTraining.trainingDescription"></textarea>
+		                            </div>
+		                        </div>
+		                        <div class="form-group">
+		                            <label for="inputEmail3" class="col-sm-2 control-label">Keywords:</label>
+		                            <div class="col-sm-7">
+		                                <textarea type="text" class="form-control" id="inputEmail3" placeholder="Keywords" ng-model="model.createTraining.trainingKeywords">
+		                                </textarea>
+		                            </div>
+		                        </div>
+		                        <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-7">
                                         <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="model.create(model.newLocation)" ng-disabled="model.locationCreateForm.$invalid">Create</button>
                                     </div>
                                 </div>
+		                    </div>
                                  <div ng-show="model.isCreateSuccessful" class="alert alert-success" role="alert">Location created successfully.</div>
                                  <div ng-show="model.isCreateFailed" class="alert alert-danger" role="alert">Failed to create location. Please check the information entered above.</div>
                             </div>
